<resources>
    <string name="app_name">Alarma Hidrátate</string>
    <string name="navigation_drawer_open">Abrir navigation drawer</string>
    <string name="navigation_drawer_close">Cerrar navigation drawer</string>
    <!--<string name="nav_header_title">Android Studio</string>-->
    <!--<string name="nav_header_subtitle">android.studio@android.com</string>-->
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Cerrar Sesión</string>

    <!-- TEXTOS DE LOGIN-->
    <string name="inicio">Inicio de Sesión</string>
    <string name="correo">Correo electrónico</string>
    <string name="contrasena">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrarse">Registrarse</string>
    <!-- Texto de Toast -->
    <string name="errorDatos">Ingrese todos los datos</string>
    <string name="errorInicio">Error al iniciar</string>

    <!--TEXTO PARA REGISTRARSE-->
    <string name="crear">Crear cuenta</string>
    <string name="ingrese">¡BIENVENIDO!</string>
    <string name="nombre">Nombre</string>
    <string name="genero">Género</string>
    <string name="femenino">Femenino</string>
    <string name="masculino">Masculino</string>
    <string name="peso">Peso</string>
    <string name="ingresePeso">Peso en lb</string>
    <string name="aceptar">Aceptar</string>
    <string name="icono">icono</string>
    <!-- Texto de Toast-->
    <string name="errorRegistro">Error al crear la cuenta</string>
    <string name="cuentaCreada">Su cuenta se ha creado con éxito</string>

    <!-- TEXTOS DE MENÚ NAVIGATION DRAWER-->
    <string name="nav_inicio">Inicio</string>
    <string name="nav_contenedor">Contenedores</string>
    <string name="nav_historial">Historial</string>
    <string name="nav_configuracion">Configuración</string>
    <string name="nav_informacion">Información</string>
    <string name="nav_header_titulo">Alarma-Hidrátate</string>
    <string name="nav_header_subtitulo">alarmahidratate@app.com</string>
    <string name="nav_cerrar">Cerrar Sesión</string>

    <!-- TEXTOS DE PRUEBA -->
    <string name="text_informacion">Informacion</string>
    <string name="text_configuracion">Configuracion</string>
    <string name="text_contenedores">Contenedores</string>

    <!-- TEXTO DE SPLASH-->
    <string name="logo">Logo AlarmaHidrátate</string>


    <!-- TEXTO FRAGMENT CONSUMO/INICIO-->
    <string name="pleca">/</string>
    <string name="ingresado">0</string>
    <string name="esperado">0</string>
    <string name="vaso">Vaso</string>
    <string name="taza">Taza</string>
    <string name="botella">Botella</string>
    <string name="ml">ml</string>
    <string name="mlContenedores">0</string>
    <string name="localeLanguage">es</string>
    <string name="localeCountry">hn</string>
    <!-- Texto de errores -->
    <string name="errorcarga">Error al cargar datos</string>

    <!-- TEXTO FRAGMENT CONTENEDORES-->
    <string name="contenedor">Vaso</string>
    <string name="medida">150 ml</string>
    <string name="cambiar">Modificar</string>
    <string name="cantidad">Elija un tamaño</string>
    <string name="modificar">Modificar</string>
    <string name="cancelar">Cancelar</string>
    <string name="cambiarTamaño">Cambiar tamaño</string>

    <!-- TEXTO FRAGMENT HISTORIAL-->
    <string name="laFecha">Fecha</string>
    <string name="laHora">Hora</string>
    <string name="nombreContenedor">Contenedor</string>
    <string name="consumo">Consumo total</string>

    <!-- TEXTO FRAGMENT CONFIGURACIÓN-->
    <string name="general">General</string>
    <string name="sexo">Genero</string>
    <string name="libras">100</string>
    <string name="lb">lb</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="alarma">Alarma</string>
    <string name="frecuencia">Frecuencia</string>
    <string name="m15">15 minutos</string>
    <string name="m30">30 minutos</string>
    <!-- Texto para alarma -->
    <string name="noAlarma">No establecer</string>
    <string name="quinceMinutos">15 Minutos</string>
    <string name="treintaMinutos">30 Minutos</string>
    <string name="unaHora">1 Hora</string>


    <!-- TEXTO FRAGMENT INFORMACIÓN-->
    <string name="valoracion">Califícanos</string>
    <string name="desarrollada">Desarrollada por:</string>
    <string name="soda">Sonia Villeda</string>
    <string name="clase">Inteligencia Artificial</string>
    <string name="periodo">UNICAH IP 2019</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_datos">Datos</string>
    <string name="title_activity_datos_inicio">DatosInicio</string>
</resources>
