<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_inicio"
                android:icon="@drawable/ic_home"
                android:title="@string/nav_inicio"/>
        <item
                android:id="@+id/nav_contenedor"
                android:icon="@drawable/ic_container"
                android:title="@string/nav_contenedor"/>
        <item
                android:id="@+id/nav_historial"
                android:icon="@drawable/ic_history"
                android:title="@string/nav_historial"/>
        <item
                android:id="@+id/nav_configuration"
                android:icon="@drawable/ic_configuration"
                android:title="@string/nav_configuracion"/>
        <item
                android:id="@+id/nav_information"
                android:icon="@drawable/ic_information"
                android:title="@string/nav_informacion"/>
    </group>

</menu>
