<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="20dp">
    <RadioGroup
            android:layout_width="156dp"
            android:layout_height="wrap_content" android:id="@+id/rgAlarma"
            android:orientation="vertical">
        <RadioButton
                android:text="@string/noAlarma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/rbNoAlarma"
                android:textSize="18sp"/>
        <RadioButton
                android:text="@string/quinceMinutos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/rbQuince"
                android:textSize="18sp" android:layout_marginTop="10dp"/>
        <RadioButton
                android:text="@string/treintaMinutos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/rbTreinta"
                android:textSize="18sp" android:layout_marginTop="10dp"/>
        <RadioButton
                android:text="@string/unaHora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/rbHora"
                android:textSize="18sp" android:layout_marginTop="10dp"/>
    </RadioGroup>
</LinearLayout>