<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Login"
        android:background="@drawable/fondologin">

    <ImageView
            android:src="@drawable/blur"
            android:layout_width="341dp"
            android:layout_height="470dp"
            android:id="@+id/ivBlur" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.457"
            android:contentDescription="@string/logo"/>
    <TextView
            android:text="@string/nav_header_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvApp" android:textStyle="bold"
            app:fontFamily="@font/montserrat_bold" android:textSize="30sp" android:textColor="@color/colorTitulos"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/ivLogo"
            app:layout_constraintHorizontal_bias="0.495"/>
    <TextView
            android:text="@string/inicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvInicio" android:textStyle="bold"
            app:fontFamily="@font/montserrat_bold" android:textSize="24sp" android:textColor="@color/colorTitulos"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="0.497" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvApp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/etCorreo"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:hint="@string/correo" android:textSize="20sp" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/tvInicio" android:textColor="@color/colorTitulos"
            android:inputType="textEmailAddress"/>
    <Button
            android:text="@string/ingresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnIngresar"
            app:layout_constraintTop_toBottomOf="@+id/etContrasena" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="12dp"/>
    <Button
            android:text="@string/registrarse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnRegistrarse" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/btnIngresar" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.498"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etContrasena"
            android:hint="@string/contrasena" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/etCorreo" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:textSize="20sp"
            android:textColor="@color/colorTitulos"/>
    <ImageView
            android:src="@drawable/logo"
            android:layout_width="172dp"
            android:layout_height="156dp"
            android:id="@+id/ivLogo" android:layout_marginTop="4dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.497"
            android:contentDescription="@string/logo"/>
</android.support.constraint.ConstraintLayout>