<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DatosGenerales">

    <TextView
            android:text="@string/ingrese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:textStyle="bold"
            app:fontFamily="@font/roboto" android:textSize="24sp" android:textColor="@color/colorDivider"
            android:layout_marginTop="40dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="0.497"/>
    <Button
            android:text="@string/aceptar"
            android:layout_width="91dp"
            android:layout_height="48dp"
            android:id="@+id/bAceptar"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="144dp"
            android:layout_marginRight="144dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/rgGenero"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etNombre"
            android:hint="@string/ingreseNombre" android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/etPeso"
            android:hint="@string/ingresePeso" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/etNombre" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"/>
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/etPeso" android:id="@+id/rgGenero"
            android:orientation="horizontal"
            android:gravity="center">
        <RadioButton
                android:text="@string/femenino"
                android:layout_width="116dp"
                android:layout_height="wrap_content" android:id="@+id/rbFemenino" android:layout_weight="1"
        />
        <RadioButton
                android:text="@string/masculino"
                android:layout_width="111dp"
                android:layout_height="wrap_content" android:id="@+id/rbMasculino" android:layout_weight="1"
        />
    </RadioGroup>

</android.support.constraint.ConstraintLayout>