<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


    <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/ml"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tvConsumoML"
                app:fontFamily="@font/montserrat_bold" android:textSize="18sp" android:layout_marginEnd="60dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="60dp"
                android:layout_marginTop="68dp"
                app:layout_constraintTop_toTopOf="parent"
        />
        <TextView
                android:text="@string/laFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tvFecha"
                app:fontFamily="@font/montserrat_bold" android:textSize="18sp" android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="20dp"
                android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/colorTitulos"/>
        <TextView
                android:text="@string/laHora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tvHora"
                app:fontFamily="@font/montserrat_bold" android:textSize="18sp" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
                app:layout_constraintStart_toEndOf="@+id/tvFecha" android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp" android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0.502" android:textColor="@color/colorTitulos"/>
        <TextView
                android:text="@string/nombreContenedor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tvNombreContenedor"
                app:fontFamily="@font/montserrat_bold" android:textSize="18sp" android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/tvFecha"/>
        <TextView
                android:text="@string/consumo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tvConsumo"
                app:fontFamily="@font/montserrat_bold" android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/tvNombreContenedor" android:layout_marginStart="56dp"
                android:layout_marginLeft="56dp" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/tvHora" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/tvConsumoML" android:layout_marginRight="8dp"/>
        <View
                android:id="@+id/divider"
                android:layout_width="344dp"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" android:layout_marginTop="100dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.0"/>
    </android.support.constraint.ConstraintLayout>

</RelativeLayout>