<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".Fragments.FragmentConfiguracion"
                                             android:id="@+id/frameLayout2">

    <TextView
            android:text="@string/Frecuencia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvFrecuencia" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.118" android:textStyle="bold"
            app:fontFamily="@font/roboto" android:textSize="18sp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/tvNotificaciones"/>
    <TextView
            android:text="@string/notificaciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvNotificaciones"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.077" android:textColor="@color/colorPDark"
            app:fontFamily="@font/roboto" android:textStyle="bold" android:textSize="24sp"
            android:layout_marginTop="60dp" app:layout_constraintTop_toBottomOf="@+id/tvlibras"/>
    <TextView
            android:text="@string/peso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvPeso" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.103" android:textStyle="bold"
            app:fontFamily="@font/roboto" android:textSize="18sp"
            android:layout_marginTop="36dp" app:layout_constraintTop_toBottomOf="@+id/tvUsuario"/>
    <TextView
            android:text="@string/libras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvlibras" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.105"
            app:fontFamily="@font/roboto" android:textSize="18sp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/tvPeso"/>
    <TextView
            android:text="@string/nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvUsuario" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.113"
            app:fontFamily="@font/roboto" android:textSize="18sp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tvGenero"/>
    <TextView
            android:text="@string/general"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvGeneral" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.053" android:textColor="@color/colorPDark"
            app:fontFamily="@font/roboto" android:textStyle="bold" android:textSize="24sp"/>
    <TextView
            android:text="@string/nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvGenero" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.103" android:textStyle="bold"
            app:fontFamily="@font/roboto" android:textSize="18sp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tvGeneral"/>
    <RadioGroup
            android:layout_width="177dp"
            android:layout_height="97dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/tvFrecuencia" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.16" android:orientation="vertical" android:id="@+id/radioGroup">
        <RadioButton
                android:text="@string/m15"
                android:layout_width="135dp"
                android:layout_height="44dp"
                android:id="@+id/rbF1"
                android:textSize="18sp"
                tools:layout_editor_absoluteY="406dp" tools:layout_editor_absoluteX="52dp"/>
        <RadioButton
                android:text="@string/m30"
                android:layout_width="137dp"
                android:layout_height="46dp"
                android:id="@+id/rbF2"
                android:textSize="18sp"
                tools:layout_editor_absoluteY="461dp" tools:layout_editor_absoluteX="52dp"/>
    </RadioGroup>
    <Button
            android:text="@string/Frecuencia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toEndOf="@+id/radioGroup"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginBottom="168dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>